labs/compreview-package/roster/base/roster-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roster
  name: roster
spec:
  ports:
  - port: 9090
    protocol: TCP
    targetPort: 9090
  selector:
    app: roster
  type: ClusterIP
