labs/compreview-package/roster/base/roster-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: roster
  name: roster
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: roster
    weight: 100
  wildcardPolicy: None
